@@ -1,7 +1,8 @@
 ﻿Version 0.11 - compatible ONLY with A16.3 (b12)
 
-- Adjusted js-minibike script to also rotate minibike in direction of player
+- Improved js-minibike script to also rotate minibike in direction of player for easy take-off
 - Fixed js-minibike script to not work properly when Steam Family Sharing is active
+- Added js-variables script to show how to access and iterate basic game objects
 
 Version 0.10 - compatible ONLY with A16.3 (b12)
 
